# Each "NAME" gets translated into:
# "NAME.cpp", "NAME.hpp", "NAME_test.cpp"
# and each will be setup for the project by the TRINITY macro
# if there are sub-directories, simply `add_subdirectory(xyz)`
# and repeat the pattern.
TRINITY(Arch)
TRINITY(Button)
TRINITY(Emitter)
TRINITY(Field)
TRINITY(FramesPerSecond)
TRINITY(Grid)
TRINITY(holo)
TRINITY(IField)
TRINITY(IGram)
TRINITY(IProtocol)
TRINITY(Program)
TRINITY(Protocol)
TRINITY(Sprite)
##################